<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.jboss.fuse.tnb</groupId>
    <artifactId>tnb-parent</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>common</module>
        <module>system-x</module>
        <module>fuse-products</module>
    </modules>

    <properties>
        <auto-service.version>1.0-rc7</auto-service.version>
        <!--
          Careful when upgrading this version, as it also defines the camel-k-client version in fuse-products,
          that brings model classes aligned to a specific camel-k-release version
         -->
        <kubernetes.client.version>5.12.1</kubernetes.client.version>
        <javaparser.version>3.20.2</javaparser.version>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <testcontainers.version>1.15.2</testcontainers.version>
        <!-- >= 0.25 version is aligned to >= 5.11 client -->
        <xtf.version>0.25-SNAPSHOT</xtf.version>
        <junit.version>5.8.2</junit.version>
        <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
        <skip.tests>true</skip.tests>
        <jacoco.maven.plugin.version>0.8.7</jacoco.maven.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>cz.xtf</groupId>
                <artifactId>core</artifactId>
                <version>${xtf.version}</version>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers</artifactId>
                <version>${testcontainers.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
            <version>${junit.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <skip>${skip.tests}</skip>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>test</id>

            <properties>
                <skip.tests>false</skip.tests>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco.maven.plugin.version}</version>
                        <configuration>
                            <excludes>
                                <exclude>system-x/**/*</exclude>
                            </excludes>
                         </configuration>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <!-- attached to Maven test phase -->
                            <execution>
                                <id>report</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>
</project>
